pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-069-atx_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/069-atx_headings.md
---

[33m[48;5;236m# foo[K[0m
