pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-072-atx_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/072-atx_headings.md
---

[94m[104m [0m[1m[97m[104mfoo[0m


[1m[2m[3m[34m      ╌ [0m[1m[2m[3m[34mfoo[0m
